crates/ide/src/snapshots/ide__verilog_2005__ambiguous_instantiation_hover_lists_locations_without_expanding_signatures.snap
---
source: crates/ide/src/verilog_2005.rs
expression: normalize_hover_snapshot(hover.info.as_str())
---
Module reference `child`

```systemverilog
child
```


---

ambiguous reference, 2 candidates

---

Candidates
- [feature.v](<feature.v#L2>)
- [feature.v](<feature.v#L5>)
