crates/ide/src/snapshots/ide__verilog_2005__preproc_include_literal_supports_navigation_and_hover.snap
---
source: crates/ide/src/verilog_2005.rs
expression: normalize_hover_snapshot(hover.info.as_str())
---
Include `defs.svh`

```systemverilog
`include "defs.svh"
```


---

Facts
- Resolves to: [$FILE/defs.svh](<file:///$FILE/defs.svh>)
