crates/ide/src/snapshots/ide__verilog_2005__preproc_macro_definition_supports_navigation_and_hover.snap
---
source: crates/ide/src/verilog_2005.rs
expression: normalize_hover_snapshot(hover.info.as_str())
---
Macro `LOCAL_WIDTH`

```systemverilog
`define LOCAL_WIDTH 8
```


---

from [feature.v](<feature.v>) line 2
