crates/ide/src/snapshots/ide__verilog_2005__preproc_macro_hover_shows_token_paste_expansion.snap
---
source: crates/ide/src/verilog_2005.rs
expression: normalize_hover_snapshot(hover.info.as_str())
---
Macro `JOIN`

```systemverilog
`JOIN(a, b)
```


---

from [feature.v](<feature.v>) line 2

---

Expansion
```systemverilog
foobar
```
