crates/ide/src/snapshots/ide__verilog_2005__preproc_macro_param_supports_navigation_hover_and_references.snap
---
source: crates/ide/src/verilog_2005.rs
expression: normalize_hover_snapshot(info)
---
Macro parameter `value`



---

Facts
- Macro: `SHIFT`
