crates/ide/src/snapshots/ide__verilog_2005__systemverilog_program_definition_names_support_navigation_and_hover.snap
---
source: crates/ide/src/verilog_2005.rs
assertion_line: 2963
expression: normalize_hover_snapshot(hover.info.as_str())
---
```systemverilog
p
```
