crates/ide/src/snapshots/ide__verilog_2005__verilog_2005_hover_after_truncation_uses_current_syntax_context.snap
---
source: crates/ide/src/verilog_2005.rs
expression: normalize_hover_snapshot(hover.info.as_str())
---
Module `axi_addr_miter`

```systemverilog
module axi_addr_miter (
    i_last_addr,
    i_size,
    i_burst,
    i_len
)
```


---

from [feature.v](<feature.v>) line 1
