crates/ide/src/snapshots/ide__verilog_2005__verilog_2005_hover_renders_side_comment_from_trivia.snap
---
source: crates/ide/src/verilog_2005.rs
assertion_line: 2397
expression: normalize_hover_snapshot(hover.info.as_str())
---
```systemverilog
logic
```
